<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Home"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/next_race"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:id="@+id/home_heading"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_race_conlay"
        android:layout_marginVertical="20dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="14dp"
        android:layout_below="@id/home_heading"
        android:background="@drawable/rounded_corners_grey"
        >

        <TextView
            android:id="@+id/next_race_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/next_race_name"
            android:textColor="@color/f1darkblue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/next_race_circuit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/next_race_circuit"
            android:textColor="@color/f1darkblue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next_race_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/top_stories"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/top_stories"
        android:layout_below="@id/next_race_conlay"/>



        <LinearLayout
            android:layout_below="@id/top_stories"
            android:id="@+id/first_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/mick"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_news"
                android:textColor="@color/f1red"
                android:fontFamily="@font/inter_medium"
                android:textSize="12sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Schumacher and Haas to part ways at the end of 2022"
                android:textColor="@color/f1darkblue"
                android:fontFamily="@font/inter_bold"
                android:textSize="18sp" />

        </LinearLayout>

</RelativeLayout>